[tool.poetry]
name = "project_highbetasotcksstrat"
version = "0.1.0"
description = ""
authors = ["MasatoShima <masato.shima@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.8.3"
pandas = "^1.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
